k8s/demo1/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo1-ingress
spec:
  rules:
  - http:
      paths:
      - path: "/test"
        pathType: Prefix
        backend:
          service:
            name: demo1-nodeport
            port: 
              number: 31776
